# blockchain-cpp

./: CMakeLists.txt  README.md  merkle_tree.cpp  proof_of_stake.c++  proof_of_work.c++
Exercice1/: merkle_tree.cpp
Exercice2/: PoW.cpp
Exercice3/: PoS.cpp
Exercice4/: blockchain.cpp
blockchain/: CMakeLists.txt  Makefile  README.md
blockchain/include/: block.h  block_pos.h  block_pow.h  blockchain.h  blockchain_pos.h  blockchain_pow.h  merkle_tree.h  pos.h  pow.h  transaction.h  utils.h  validator.h
blockchain/src/: block_pos.cpp  block_pow.cpp  blockchain.cpp  blockchain_pos.cpp  blockchain_pow.cpp  main.cpp  merkle_tree.cpp  pos.cpp  pow.cpp  transaction.cpp  utils.cpp  validator.cpp
blockchain/tests/: test_ex1_merkle.cpp  test_ex2_pow.cpp  test_ex3_pos.cpp  test_ex4_complete.cpp
include/: merkle_tree.h
src/: main.cpp  merkle._tree.cpp
